# tensor-flight-systems

./: Cargo.toml  README.md
src/tensorflightsystems-control/: flight_control.rs  flight_monitoring.rs  flight_planning.rs
src/tensorflightsystems-core/: device-drivers  kernel.rs  system-libraries
src/tensorflightsystems-hardware/: hardware_interface.rs
src/tensorflightsystems-sensors/: sensor_array.rs  sensor_interface.rs  sensor_processing.rs
